ubuntu.tf
provider "aws" {
  access_key = "AKIA27BRXH7YDJNQO3U5"
  secret_key = "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"
  region     = "us-east-1"
}
resource "aws_instance" "mac_Ubuntu2" {
  ami           = "ami-04505e74c0741db8d"
  instance_type = "t2.micro"
  key_name      = "Navya"
}
